--- a/Project/Jun8_MVPrecording.ipynb
+++ b/Project/Jun8_MVPrecording.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,15 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "output_0.wav output_2.wav output_4.wav output_6.wav output_8.wav\r\n",
-      "output_1.wav output_3.wav output_5.wav output_7.wav output_9.wav\r\n"
+      "rm: Data/Live/output_*.wav: No such file or directory\r\n"
      ]
     }
    ],
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +120,21 @@
      "output_type": "stream",
      "text": [
       "* recording: 0\n",
-      "--- 10.280558109283447 seconds ---\n"
+      "* recording: 1\n",
+      "* recording: 2\n",
+      "* recording: 3\n",
+      "* recording: 4\n",
+      "* recording: 5\n",
+      "* recording: 6\n",
+      "* recording: 7\n",
+      "* recording: 8\n",
+      "* recording: 9\n",
+      "* recording: 10\n",
+      "* recording: 11\n",
+      "* recording: 12\n",
+      "* recording: 13\n",
+      "* recording: 14\n",
+      "--- 302.36735105514526 seconds ---\n"
      ]
     }
    ],
