save progress June 13

--- a/Project/MVP.ipynb
+++ b/Project/MVP.ipynb
@@ -86,7 +86,8 @@
     "## Web App\n",
     "\n",
     "* Dash audio? https://community.plot.ly/t/audio-recording-feature-in-dash-app/7837\n",
-    "* Flask audio: https://henri.io/posts/streaming-microphone-input-with-flask.html"
+    "* Flask audio: https://henri.io/posts/streaming-microphone-input-with-flask.html\n",
+    "* Flask example: https://realpython.com/flask-by-example-part-1-project-setup/\n"
    ]
   },
   {
