save before week 3

--- a/Project/DownloadAudio_NPR.ipynb
+++ b/Project/DownloadAudio_NPR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,23 +14,35 @@
     "import shutil\n",
     "from tqdm import tqdm\n",
     "from pydub import AudioSegment\n",
+    "import multiprocessing as mp\n",
     "\n",
-    "%matplotlib inline"
+    "\n",
+    "## My codes\n",
+    "from src.utils import SoundToText\n",
+    "\n",
+    "## settings\n",
+    "%matplotlib inline\n",
+    "\n",
+    "# Some more magic so that the notebook will reload external python modules;\n",
+    "# see http://stackoverflow.com/questions/1907993/autoreload-of-modules-in-ipython\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m\u001b[36mData\u001b[m\u001b[m                     MVP.ipynb                Prev_MVP.ipynb\r\n",
-      "DownloadAudio.ipynb      NPR.html                 README.md\r\n",
-      "Jun8_MVPProcessing.ipynb \u001b[1m\u001b[36mNPR_files\u001b[m\u001b[m\r\n",
-      "Jun8_MVPrecording.ipynb  \u001b[1m\u001b[36mPlot\u001b[m\u001b[m\r\n"
+      "\u001b[1m\u001b[36mData\u001b[m\u001b[m                     MVP.ipynb                Text_to_Suammary.ipynb\r\n",
+      "DownloadAudio_NPR.ipynb  \u001b[1m\u001b[36mPlot\u001b[m\u001b[m                     chunk_s2.wav\r\n",
+      "Jun15_MVP.ipynb          Prev_MVP.ipynb           \u001b[1m\u001b[36msrc\u001b[m\u001b[m\r\n",
+      "Jun8_MVPProcessing.ipynb README.md                \u001b[1m\u001b[36mwebsite\u001b[m\u001b[m\r\n",
+      "Jun8_MVPrecording.ipynb  Sphinx-VS-Google.ipynb\r\n"
      ]
     }
    ],
@@ -43,30 +55,33 @@
    "metadata": {},
    "source": [
     "##  Data source:\n",
-    "##  NPR: https://www.npr.org/podcasts/2038/news-politics"
+    "##  NPR: https://www.npr.org/podcasts/2038/news-politics\n",
+    "\n",
+    "## https://www.npr.org/podcasts/452538677/note-to-self\n",
+    "## https://www.npr.org/podcasts/510298/ted-radio-hour\n",
+    "\n",
+    "## https://www.npr.org/series/4516989/storycorps/archive"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "soup = BeautifulSoup(open(\"Data/NPR/NPR.html\"), \"html.parser\")"
+    "soup = BeautifulSoup(open(\"Data/NPR_story/StoryCorps_NPR.html\"), \"html.parser\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<p class=\"teaser\">\n",
-      "<time datetime=\"2018-06-08\"><span class=\"date\">June 8, 2018 • </span></time>Before meeting with Kim Jong Un, President Trump heads to Quebec for the G7 summit. He'll meet with world leaders united against his trade policies. Also, a visit to an immigration court in Texas. And why is Pope Francis meeting with oil executives tomorrow?\n",
-      "        </p> <li class=\"audio-tool audio-tool-download\"><a data-metrics='{\"category\":\"audio actions\",\"action\":\"download audio\",\"label\":\"618167844\",\"noninteraction\":true}' href=\"https://play.podtrac.com/npr-510318/npr.mc.tritondigital.com/NPR_510318/media/anon.npr-mp3/npr/upfirst/2018/06/20180608_upfirst_upfirst_06082018.mp3?orgId=1&amp;d=784&amp;p=510318&amp;story=618167844&amp;t=podcast&amp;e=618167844&amp;siteplayer=true&amp;dl=1\"><b class=\"icn-download\"></b><b class=\"audio-tool-label\">Download</b></a>\n",
+      "<p class=\"teaser\"><a href=\"https://www.npr.org/2018/06/15/619957265/at-28-years-old-learning-to-be-a-sister\"><time datetime=\"2018-06-15\"><span class=\"date\">June 15, 2018 • </span></time>After a DNA test revealed that they were half sisters, two women recall meeting each other for the first time. The discovery, for both of them, fulfilled a missing link.</a></p> <li class=\"audio-tool audio-tool-download\"><a data-metrics='{\"category\":\"audio actions\",\"action\":\"download audio\",\"label\":\"619957265\",\"noninteraction\":true}' href=\"https://ondemand.npr.org/anon.npr-mp3/npr/me/2018/06/20180615_me_at_28_years_old_learning_to_be_a_sister.mp3?orgId=1&amp;topicId=1022&amp;aggIds=4516989&amp;d=148&amp;p=3&amp;story=619957265&amp;siteplayer=true&amp;dl=1\"><b class=\"icn-download\"></b><b class=\"audio-tool-label\">Download</b></a>\n",
       "</li>\n"
      ]
     }
@@ -75,7 +90,8 @@
     "pod_text = []\n",
     "pod_audi = []\n",
     "\n",
-    "for i in soup.find_all('article', {'class' : 'item podcast-episode'}):\n",
+    "#for i in soup.find_all('article', {'class' : 'item podcast-episode'}):\n",
+    "for i in soup.find_all('article', {'class' : 'item has-image'}):\n",
     "    #pods.append(i)\n",
     "    #make sure both audi and text exist for the same episode\n",
     "    for j in i.find_all('p', {'class': 'teaser'}):\n",
@@ -88,22 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 0\n",
-      "1 0\n",
-      "1 0\n",
-      "1 0\n",
-      "1 0\n",
-      "1 0\n",
-      "<p class=\"teaser\">\n",
-      "<time datetime=\"2018-06-08\"><span class=\"date\">June 8, 2018 • </span></time>Before meeting with Kim Jong Un, President Trump heads to Quebec for the G7 summit. He'll meet with world leaders united against his trade policies. Also, a visit to an immigration court in Texas. And why is Pope Francis meeting with oil executives tomorrow?\n",
-      "        </p> <a data-metrics='{\"category\":\"audio actions\",\"action\":\"download audio\",\"label\":\"618167844\",\"noninteraction\":true}' href=\"https://play.podtrac.com/npr-510318/npr.mc.tritondigital.com/NPR_510318/media/anon.npr-mp3/npr/upfirst/2018/06/20180608_upfirst_upfirst_06082018.mp3?orgId=1&amp;d=784&amp;p=510318&amp;story=618167844&amp;t=podcast&amp;e=618167844&amp;siteplayer=true&amp;dl=1\"><b class=\"icn-download\"></b><b class=\"audio-tool-label\">Download</b></a>\n"
+      "<p class=\"teaser\"><a href=\"https://www.npr.org/2018/06/15/619957265/at-28-years-old-learning-to-be-a-sister\"><time datetime=\"2018-06-15\"><span class=\"date\">June 15, 2018 • </span></time>After a DNA test revealed that they were half sisters, two women recall meeting each other for the first time. The discovery, for both of them, fulfilled a missing link.</a></p> <a data-metrics='{\"category\":\"audio actions\",\"action\":\"download audio\",\"label\":\"619957265\",\"noninteraction\":true}' href=\"https://ondemand.npr.org/anon.npr-mp3/npr/me/2018/06/20180615_me_at_28_years_old_learning_to_be_a_sister.mp3?orgId=1&amp;topicId=1022&amp;aggIds=4516989&amp;d=148&amp;p=3&amp;story=619957265&amp;siteplayer=true&amp;dl=1\"><b class=\"icn-download\"></b><b class=\"audio-tool-label\">Download</b></a>\n"
      ]
     }
    ],
@@ -111,7 +119,8 @@
     "pod_text = []\n",
     "pod_audi = []\n",
     "\n",
-    "for i in soup.find_all('article', {'class' : 'item podcast-episode'}):\n",
+    "#for i in soup.find_all('article', {'class' : 'item podcast-episode'}):\n",
+    "for i in soup.find_all('article', {'class' : 'item has-image'}):\n",
     "    #pods.append(i)\n",
     "    #make sure both audi and text exist for the same episode\n",
     "    text = i.find_all('p', {'class': 'teaser'})\n",
@@ -119,7 +128,7 @@
     "    if len(text) != 1 or len(audi) != 1:\n",
     "        ## no download links...\n",
     "        pass\n",
-    "        print (len(text), len(audi))\n",
+    "        #print (len(text), len(audi))\n",
     "    else:\n",
     "        pod_text.append(text[0])\n",
     "        pod_audi.append(audi[0].find_all('a', href=True)[0])\n",
@@ -128,14 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "314 314\n"
+      "426 426\n"
      ]
     }
    ],
@@ -145,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,16 +163,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Before meeting with Kim Jong Un, President Trump heads to Quebec for the G7 summit. He'll meet with world leaders united against his trade policies. Also, a visit to an immigration court in Texas. And why is Pope Francis meeting with oil executives tomorrow?\""
+       "'After a DNA test revealed that they were half sisters, two women recall meeting each other for the first time. The discovery, for both of them, fulfilled a missing link.</a></p>'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,16 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<a data-metrics='{\"category\":\"audio actions\",\"action\":\"download audio\",\"label\":\"618167844\",\"noninteraction\":true}' href=\"https://play.podtrac.com/npr-510318/npr.mc.tritondigital.com/NPR_510318/media/anon.npr-mp3/npr/upfirst/2018/06/20180608_upfirst_upfirst_06082018.mp3?orgId=1&amp;d=784&amp;p=510318&amp;story=618167844&amp;t=podcast&amp;e=618167844&amp;siteplayer=true&amp;dl=1\"><b class=\"icn-download\"></b><b class=\"audio-tool-label\">Download</b></a>"
+       "<a data-metrics='{\"category\":\"audio actions\",\"action\":\"download audio\",\"label\":\"619957265\",\"noninteraction\":true}' href=\"https://ondemand.npr.org/anon.npr-mp3/npr/me/2018/06/20180615_me_at_28_years_old_learning_to_be_a_sister.mp3?orgId=1&amp;topicId=1022&amp;aggIds=4516989&amp;d=148&amp;p=3&amp;story=619957265&amp;siteplayer=true&amp;dl=1\"><b class=\"icn-download\"></b><b class=\"audio-tool-label\">Download</b></a>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,16 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://play.podtrac.com/npr-510318/npr.mc.tritondigital.com/NPR_510318/media/anon.npr-mp3/npr/upfirst/2018/06/20180608_upfirst_upfirst_06082018.mp3?orgId=1&d=784&p=510318&story=618167844&t=podcast&e=618167844&siteplayer=true&dl=1'"
+       "'https://ondemand.npr.org/anon.npr-mp3/npr/me/2018/06/20180615_me_at_28_years_old_learning_to_be_a_sister.mp3?orgId=1&topicId=1022&aggIds=4516989&d=148&p=3&story=619957265&siteplayer=true&dl=1'"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,28 +234,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.mp3               2.txt               3_5.wav             5_3.wav\r\n",
+      "0.txt               2_0.wav             3_6.wav             5_4.wav\r\n",
+      "0_0.wav             2_1.wav             3_7.wav             5_5.wav\r\n",
+      "0_1.wav             2_10.wav            3_8.wav             5_6.wav\r\n",
+      "0_2.wav             2_2.wav             3_9.wav             5_7.wav\r\n",
+      "0_3.wav             2_3.wav             4.mp3               5_8.wav\r\n",
+      "0_4.wav             2_4.wav             4.txt               5_9.wav\r\n",
+      "0_5.wav             2_5.wav             4_0.wav             6.mp3\r\n",
+      "0_6.wav             2_6.wav             4_1.wav             6.txt\r\n",
+      "0_7.wav             2_7.wav             4_2.wav             6_0.wav\r\n",
+      "1.mp3               2_8.wav             4_3.wav             6_1.wav\r\n",
+      "1.txt               2_9.wav             4_4.wav             6_2.wav\r\n",
+      "1_0.wav             3.mp3               4_5.wav             6_3.wav\r\n",
+      "1_1.wav             3.txt               4_6.wav             6_4.wav\r\n",
+      "1_2.wav             3_0.wav             4_7.wav             6_5.wav\r\n",
+      "1_3.wav             3_1.wav             4_8.wav             6_6.wav\r\n",
+      "1_4.wav             3_10.wav            5.mp3               6_7.wav\r\n",
+      "1_5.wav             3_11.wav            5.txt               StoryCorps_NPR.html\r\n",
+      "1_6.wav             3_2.wav             5_0.wav\r\n",
+      "1_7.wav             3_3.wav             5_1.wav\r\n",
+      "2.mp3               3_4.wav             5_2.wav\r\n"
+     ]
+    }
+   ],
    "source": [
-    "!ls Data/NPR"
+    "!ls Data/NPR_story"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 314/314 [16:21<00:00,  3.12s/it]\n"
+      "100%|██████████| 1/1 [00:01<00:00,  1.68s/it]\n"
      ]
     }
    ],
    "source": [
-    "for i in tqdm(range(len(pod_text))):\n",
+    "path = \"Data/NPR_story/\"\n",
+    "for i in tqdm(range(0, len(pod_text))):\n",
     "    t = pod_text[i]\n",
     "    ## Get time string\n",
     "    i_time = t.find(\"time\").get(\"datetime\").replace(\"-\", \"\")\n",
@@ -256,22 +294,86 @@
     "    ## Get download link\n",
     "    i_url = a.get(\"href\")\n",
     "    \n",
-    "    with open(\"Data/NPR/\" + str(i) + \".txt\", \"w\") as text_file:\n",
+    "    with open(path + str(i) + \".txt\", \"w\") as text_file:\n",
     "        text_file.write(i_teaser)\n",
     "        text_file.write(\"\\n\")\n",
     "        text_file.write(i_time)\n",
     "    \n",
     "    ## download file\n",
-    "    output_file = \"Data/NPR/\" + str(i) + \".mp3\"\n",
+    "    output_file = path + str(i) + \".mp3\"\n",
     "    with urllib.request.urlopen(i_url) as response, open(output_file, 'wb') as out_file:\n",
     "        shutil.copyfileobj(response, out_file)\n",
     "    sound = AudioSegment.from_mp3(output_file)\n",
     "    \n",
     "    ## split into 20 second pieces\n",
     "    for j, chunk in enumerate(sound[::20 * 1000]):\n",
-    "      with open(\"Data/NPR/\" + str(i) + \"_\" + str(j) + \".wav\", \"wb\") as f:\n",
+    "      with open(path + str(i) + \"_\" + str(j) + \".wav\", \"wb\") as f:\n",
     "        chunk.export(f, format=\"wav\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## clean the tail files\n",
+    "#### find *.wav -type f -size -500k -delete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60/60 [17:56<00:00, 17.95s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = \"Data/NPR_story/\"\n",
+    "#start_time = time.time()\n",
+    "## 39 is missing\n",
+    "for i in tqdm(range(120, len(pod_text))): #len(pod_text)\n",
+    "    file_path = path ## total 314\n",
+    "    inputtasks = glob(file_path + str(i) + \"_*.wav\")\n",
+    "    #print(\" Running %s jobs on %s cores\" % (len(inputtasks), mp.cpu_count()-2))\n",
+    "    npool = min(len(inputtasks), mp.cpu_count()-2)\n",
+    "    pool  = mp.Pool(npool)\n",
+    "\n",
+    "    #print(inputtasks)\n",
+    "    inputdic = {}\n",
+    "    for k in range(len(inputtasks)):\n",
+    "        inputdic[k] = {\"file\":file_path + str(i) + \"_\" + str(k) + \".wav\", \"n\":i}\n",
+    "\n",
+    "    fulltextdic = {}\n",
+    "    ## parallel\n",
+    "    for result in pool.map(SoundToText, inputtasks):\n",
+    "            fulltextdic.update(result)\n",
+    "#     ## standard\n",
+    "#     for j in inputtasks:\n",
+    "#         print(j)\n",
+    "#         result = SoundToText(i) #dictionary of values, plots\n",
+    "#         fulltextdic.update(result)\n",
+    "    \n",
+    "    fulltext = \"\"\n",
+    "    for k in range(len(fulltextdic.keys())):\n",
+    "        fulltext += fulltextdic[file_path + str(i) + \"_\" + str(k) + \".wav\"]\n",
+    "    #print(fulltext)\n",
+    "    with open(file_path + str(i) + \"_trans.txt\", \"w\") as text_file:\n",
+    "            text_file.write(fulltext)\n",
+    "    pool.close()\n",
+    "#print(\"--- %s seconds ---\" % (time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finished!"
    ]
   },
   {
