--- a/Project/Text_to_Suammary.ipynb
+++ b/Project/Text_to_Suammary.ipynb
@@ -13,18 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## for text recognition\n",
     "import nltk\n",
@@ -1578,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1606,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1652,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1662,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1702,14 +1693,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 300/300 [01:51<00:00,  2.69it/s]\n"
+      "\r",
+      "  0%|          | 0/96 [00:00<?, ?it/s]"
      ]
     }
    ],
@@ -1717,13 +1709,14 @@
     "all_token = []\n",
     "all_token_alltype = []\n",
     "all_sumtoken = []\n",
-    "N = 300\n",
+    "N = 96\n",
+    "path = 'Data/NPR_conv/'\n",
     "for i in tqdm(range(N)):\n",
     "    test_text = []\n",
     "    test_sumtext   = []\n",
-    "    with open('Data/NPR/' + str(i) + '_trans.txt', 'r') as myfile:\n",
+    "    with open(path + str(i) + '_trans.txt', 'r') as myfile:\n",
     "        test_text.append(cleanText(myfile.read()))\n",
-    "    with open('Data/NPR/' + str(i) + '.txt', 'r') as myfile:\n",
+    "    with open(path + str(i) + '.txt', 'r') as myfile:\n",
     "        test_sumtext.append(cleanText(myfile.read()))\n",
     "    ## calculate the maximum score\n",
     "    nlp_test_text = nlp(\"\".join(test_text))\n",
