--- a/Project/DownloadAudio_NPRconv.ipynb
+++ b/Project/DownloadAudio_NPRconv.ipynb
@@ -39,12 +39,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data\t\t\t      Jun8_MVPrecording.ipynb  Sphinx-VS-Google.ipynb\r\n",
-      "DownloadAudio_NPRconv.ipynb   MVP.ipynb\t\t       src\r\n",
-      "DownloadAudio_NPR.ipynb       NLP_studies.ipynb        Text_to_Suammary.ipynb\r\n",
-      "DownloadAudio_NPRstory.ipynb  Plot\t\t       website\r\n",
-      "Jun15_MVP.ipynb\t\t      Prev_MVP.ipynb\r\n",
-      "Jun8_MVPProcessing.ipynb      README.md\r\n"
+      "\u001b[1m\u001b[36mData\u001b[m\u001b[m                         README.md\r\n",
+      "DownloadAudio_NPR.ipynb      Sentence_to_summary.ipynb\r\n",
+      "DownloadAudio_NPRconv.ipynb  Sphinx-VS-Google.ipynb\r\n",
+      "DownloadAudio_NPRstory.ipynb Text_to_Suammary.ipynb\r\n",
+      "Jun15_MVP.ipynb              all_sum.txt\r\n",
+      "Jun8_MVPProcessing.ipynb     all_trans.txt\r\n",
+      "Jun8_MVPrecording.ipynb      chunk_s0.wav\r\n",
+      "MVP.ipynb                    chunk_s1.wav\r\n",
+      "NLP_studies.ipynb            chunk_s2.wav\r\n",
+      "\u001b[1m\u001b[36mPlot\u001b[m\u001b[m                         \u001b[1m\u001b[36msrc\u001b[m\u001b[m\r\n",
+      "Prev_MVP.ipynb               \u001b[1m\u001b[36mwebsite\u001b[m\u001b[m\r\n"
      ]
     }
    ],
@@ -248,31 +253,79 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.mp3\t20.txt\t32.mp3\t43.txt\t55.mp3\t66.txt\t78.mp3\t89.txt\r\n",
-      "0.txt\t21.mp3\t32.txt\t44.mp3\t55.txt\t67.mp3\t78.txt\t8.mp3\r\n",
-      "10.mp3\t21.txt\t33.mp3\t44.txt\t56.mp3\t67.txt\t79.mp3\t8.txt\r\n",
-      "10.txt\t22.mp3\t33.txt\t45.mp3\t56.txt\t68.mp3\t79.txt\t90.mp3\r\n",
-      "11.mp3\t22.txt\t34.mp3\t45.txt\t57.mp3\t68.txt\t7.mp3\t90.txt\r\n",
-      "11.txt\t23.mp3\t34.txt\t46.mp3\t57.txt\t69.mp3\t7.txt\t91.mp3\r\n",
-      "12.mp3\t23.txt\t35.mp3\t46.txt\t58.mp3\t69.txt\t80.mp3\t91.txt\r\n",
-      "12.txt\t24.mp3\t35.txt\t47.mp3\t58.txt\t6.mp3\t80.txt\t92.mp3\r\n",
-      "13.mp3\t24.txt\t36.mp3\t47.txt\t59.mp3\t6.txt\t81.mp3\t92.txt\r\n",
-      "13.txt\t25.mp3\t36.txt\t48.mp3\t59.txt\t70.mp3\t81.txt\t93.mp3\r\n",
-      "14.mp3\t25.txt\t37.mp3\t48.txt\t5.mp3\t70.txt\t82.mp3\t93.txt\r\n",
-      "14.txt\t26.mp3\t37.txt\t49.mp3\t5.txt\t71.mp3\t82.txt\t94.mp3\r\n",
-      "15.mp3\t26.txt\t38.mp3\t49.txt\t60.mp3\t71.txt\t83.mp3\t94.txt\r\n",
-      "15.txt\t27.mp3\t38.txt\t4.mp3\t60.txt\t72.mp3\t83.txt\t95.mp3\r\n",
-      "16.mp3\t27.txt\t39.mp3\t4.txt\t61.mp3\t72.txt\t84.mp3\t95.txt\r\n",
-      "16.txt\t28.mp3\t39.txt\t50.mp3\t61.txt\t73.mp3\t84.txt\t9.mp3\r\n",
-      "17.mp3\t28.txt\t3.mp3\t50.txt\t62.mp3\t73.txt\t85.mp3\t9.txt\r\n",
-      "17.txt\t29.mp3\t3.txt\t51.mp3\t62.txt\t74.mp3\t85.txt\tNoteToSelfNPR.html\r\n",
-      "18.mp3\t29.txt\t40.mp3\t51.txt\t63.mp3\t74.txt\t86.mp3\r\n",
-      "18.txt\t2.mp3\t40.txt\t52.mp3\t63.txt\t75.mp3\t86.txt\r\n",
-      "19.mp3\t2.txt\t41.mp3\t52.txt\t64.mp3\t75.txt\t87.mp3\r\n",
-      "19.txt\t30.mp3\t41.txt\t53.mp3\t64.txt\t76.mp3\t87.txt\r\n",
-      "1.mp3\t30.txt\t42.mp3\t53.txt\t65.mp3\t76.txt\t88.mp3\r\n",
-      "1.txt\t31.mp3\t42.txt\t54.mp3\t65.txt\t77.mp3\t88.txt\r\n",
-      "20.mp3\t31.txt\t43.mp3\t54.txt\t66.mp3\t77.txt\t89.mp3\r\n"
+      "0.mp3              30_trans.txt       53.mp3             75.txt\r\n",
+      "0.txt              31.mp3             53.txt             75_trans.txt\r\n",
+      "0_trans.txt        31.txt             53_trans.txt       76.mp3\r\n",
+      "1.mp3              31_trans.txt       54.mp3             76.txt\r\n",
+      "1.txt              32.mp3             54.txt             76_trans.txt\r\n",
+      "10.mp3             32.txt             54_trans.txt       77.mp3\r\n",
+      "10.txt             32_trans.txt       55.mp3             77.txt\r\n",
+      "10_trans.txt       33.mp3             55.txt             77_trans.txt\r\n",
+      "11.mp3             33.txt             55_trans.txt       78.mp3\r\n",
+      "11.txt             33_trans.txt       56.mp3             78.txt\r\n",
+      "11_trans.txt       34.mp3             56.txt             78_trans.txt\r\n",
+      "12.mp3             34.txt             56_trans.txt       79.mp3\r\n",
+      "12.txt             34_trans.txt       57.mp3             79.txt\r\n",
+      "12_trans.txt       35.mp3             57.txt             79_trans.txt\r\n",
+      "13.mp3             35.txt             57_trans.txt       7_trans.txt\r\n",
+      "13.txt             35_trans.txt       58.mp3             8.mp3\r\n",
+      "13_trans.txt       36.mp3             58.txt             8.txt\r\n",
+      "14.mp3             36.txt             58_trans.txt       80.mp3\r\n",
+      "14.txt             36_trans.txt       59.mp3             80.txt\r\n",
+      "14_trans.txt       37.mp3             59.txt             80_trans.txt\r\n",
+      "15.mp3             37.txt             59_trans.txt       81.mp3\r\n",
+      "15.txt             37_trans.txt       5_trans.txt        81.txt\r\n",
+      "15_trans.txt       38.mp3             6.mp3              81_trans.txt\r\n",
+      "16.mp3             38.txt             6.txt              82.mp3\r\n",
+      "16.txt             38_trans.txt       60.mp3             82.txt\r\n",
+      "16_trans.txt       39.mp3             60.txt             82_trans.txt\r\n",
+      "17.mp3             39.txt             60_trans.txt       83.mp3\r\n",
+      "17.txt             39_trans.txt       61.mp3             83.txt\r\n",
+      "17_trans.txt       3_trans.txt        61.txt             83_trans.txt\r\n",
+      "18.mp3             4.mp3              61_trans.txt       84.mp3\r\n",
+      "18.txt             4.txt              62.mp3             84.txt\r\n",
+      "18_trans.txt       40.mp3             62.txt             84_trans.txt\r\n",
+      "19.mp3             40.txt             62_trans.txt       85.mp3\r\n",
+      "19.txt             40_trans.txt       63.mp3             85.txt\r\n",
+      "19_trans.txt       41.mp3             63.txt             85_trans.txt\r\n",
+      "1_trans.txt        41.txt             63_trans.txt       86.mp3\r\n",
+      "2.mp3              41_trans.txt       64.mp3             86.txt\r\n",
+      "2.txt              42.mp3             64.txt             86_trans.txt\r\n",
+      "20.mp3             42.txt             64_trans.txt       87.mp3\r\n",
+      "20.txt             42_trans.txt       65.mp3             87.txt\r\n",
+      "20_trans.txt       43.mp3             65.txt             87_trans.txt\r\n",
+      "21.mp3             43.txt             65_trans.txt       88.mp3\r\n",
+      "21.txt             43_trans.txt       66.mp3             88.txt\r\n",
+      "21_trans.txt       44.mp3             66.txt             88_trans.txt\r\n",
+      "22.mp3             44.txt             66_trans.txt       89.mp3\r\n",
+      "22.txt             44_trans.txt       67.mp3             89.txt\r\n",
+      "22_trans.txt       45.mp3             67.txt             89_trans.txt\r\n",
+      "23.mp3             45.txt             67_trans.txt       8_trans.txt\r\n",
+      "23.txt             45_trans.txt       68.mp3             9.mp3\r\n",
+      "23_trans.txt       46.mp3             68.txt             9.txt\r\n",
+      "24.mp3             46.txt             68_trans.txt       90.mp3\r\n",
+      "24.txt             46_trans.txt       69.mp3             90.txt\r\n",
+      "24_trans.txt       47.mp3             69.txt             90_trans.txt\r\n",
+      "25.mp3             47.txt             69_trans.txt       91.mp3\r\n",
+      "25.txt             47_trans.txt       6_trans.txt        91.txt\r\n",
+      "25_trans.txt       48.mp3             7.mp3              91_trans.txt\r\n",
+      "26.mp3             48.txt             7.txt              92.mp3\r\n",
+      "26.txt             48_trans.txt       70.mp3             92.txt\r\n",
+      "26_trans.txt       49.mp3             70.txt             92_trans.txt\r\n",
+      "27.mp3             49.txt             70_trans.txt       93.mp3\r\n",
+      "27.txt             49_trans.txt       71.mp3             93.txt\r\n",
+      "27_trans.txt       4_trans.txt        71.txt             93_trans.txt\r\n",
+      "28.mp3             5.mp3              71_trans.txt       94.mp3\r\n",
+      "28.txt             5.txt              72.mp3             94.txt\r\n",
+      "28_trans.txt       50.mp3             72.txt             94_trans.txt\r\n",
+      "29.mp3             50.txt             72_trans.txt       95.mp3\r\n",
+      "29.txt             50_trans.txt       73.mp3             95.txt\r\n",
+      "29_trans.txt       51.mp3             73.txt             95_trans.txt\r\n",
+      "2_trans.txt        51.txt             73_trans.txt       9_trans.txt\r\n",
+      "3.mp3              51_trans.txt       74.mp3             NoteToSelfNPR.html\r\n",
+      "3.txt              52.mp3             74.txt\r\n",
+      "30.mp3             52.txt             74_trans.txt\r\n",
+      "30.txt             52_trans.txt       75.mp3\r\n"
      ]
     }
    ],
@@ -325,42 +378,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 96/96 [29:19<00:00, 18.33s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "path = \"Data/NPR_conv/\"\n",
     "bigdic = {}\n",
     "for i in tqdm(range(0, N)):\n",
     "    bigdic.update(PrepareSound(path + str(i) + \".mp3\", silencesplit=True))\n",
-    "    file_path = path ## total \n",
-    "    inputtasks = glob(file_path + str(i) + \"_*.wav\")\n",
-    "    #print(\" Running %s jobs on %s cores\" % (len(inputtasks), mp.cpu_count()-2))\n",
-    "    npool = min(len(inputtasks), mp.cpu_count())\n",
-    "    pool  = mp.Pool(npool)\n",
+    "#     file_path = path ## total \n",
+    "#     inputtasks = glob(file_path + str(i) + \"_*.wav\")\n",
+    "#     #print(\" Running %s jobs on %s cores\" % (len(inputtasks), mp.cpu_count()-2))\n",
+    "#     npool = min(len(inputtasks), mp.cpu_count())\n",
+    "#     pool  = mp.Pool(npool)\n",
     "\n",
-    "    fulltextdic = {}\n",
-    "    ## parallel\n",
-    "    for result in pool.map(SoundToText, inputtasks):\n",
-    "            fulltextdic.update(result)\n",
-    "#     ## standard\n",
-    "#     for j in inputtasks:\n",
-    "#         print(j)\n",
-    "#         result = SoundToText(j) #dictionary of values, plots\n",
-    "#         fulltextdic.update(result)\n",
+    "#     fulltextdic = {}\n",
+    "#     ## parallel\n",
+    "#     for result in pool.map(SoundToText, inputtasks):\n",
+    "#             fulltextdic.update(result)\n",
+    "# #     ## standard\n",
+    "# #     for j in inputtasks:\n",
+    "# #         print(j)\n",
+    "# #         result = SoundToText(j) #dictionary of values, plots\n",
+    "# #         fulltextdic.update(result)\n",
     "    \n",
-    "    for k in inputtasks:\n",
-    "        os.remove(k)\n",
+    "#     for k in inputtasks:\n",
+    "#         os.remove(k)\n",
     "        \n",
-    "    fulltext = \"\"\n",
-    "    for l in range(len(fulltextdic.keys())):\n",
-    "        fulltext += fulltextdic[file_path + str(i) + \"_\" + str(l) + \".wav\"] + \" ; \"\n",
-    "    #print(fulltext)\n",
-    "    with open(file_path + str(i) + \"_trans.txt\", \"w\") as text_file:\n",
-    "        text_file.write(fulltext)\n",
-    "    with open(file_path + 'info_' + str(i) + '.pkl', 'wb') as f:\n",
-    "        pickle.dump(fulltextdic, f)\n",
-    "    pool.close()"
+    "#     fulltext = \"\"\n",
+    "#     for l in range(len(fulltextdic.keys())):\n",
+    "#         fulltext += fulltextdic[file_path + str(i) + \"_\" + str(l) + \".wav\"] + \" ; \"\n",
+    "#     #print(fulltext)\n",
+    "#     with open(file_path + str(i) + \"_trans.txt\", \"w\") as text_file:\n",
+    "#         text_file.write(fulltext)\n",
+    "#     with open(file_path + 'info_' + str(i) + '.pkl', 'wb') as f:\n",
+    "#         pickle.dump(fulltextdic, f)\n",
+    "#     pool.close()"
    ]
   },
   {
@@ -384,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,20 +465,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'dBFS': -20.927292716731948,\n",
-       " 'max_dBFS': -1.1586272649143894,\n",
-       " 'duration': 148.89795918367346,\n",
-       " 'rms': 2945,\n",
-       " 'max': 28676}"
+       "{'dBFS': -20.08738178841199,\n",
+       " 'duration': 1420.0163265306123,\n",
+       " 'max': 32193,\n",
+       " 'max_dBFS': -0.1537697074284698,\n",
+       " 'rms': 3244}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +854,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
