--- a/Project/MVP.ipynb
+++ b/Project/MVP.ipynb
@@ -29,7 +29,7 @@
     "- !pip install --upgrade google-api-python-client\n",
     "- !pip install --upgrade google-cloud-speech\n",
     "- !pip install oauth2client\n",
-    "- "
+    "- !pip install pyAudioAnalysis ; 2to3 -w *.py; fixes"
    ]
   },
   {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -183,51 +183,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data/NCE/2/1.wav\r\n",
-      "Data/NCE/2/10.wav\r\n",
-      "Data/NCE/2/11.wav\r\n",
-      "Data/NCE/2/12.wav\r\n",
-      "Data/NCE/2/13.wav\r\n",
-      "Data/NCE/2/14.wav\r\n",
-      "Data/NCE/2/15.wav\r\n",
-      "Data/NCE/2/16.wav\r\n",
-      "Data/NCE/2/17.wav\r\n",
-      "Data/NCE/2/18.wav\r\n",
-      "Data/NCE/2/19.wav\r\n",
-      "Data/NCE/2/21.wav\r\n",
-      "Data/NCE/2/31.wav\r\n",
-      "Data/NCE/2/41.wav\r\n",
-      "Data/NCE/2/51.wav\r\n",
-      "Data/NCE/2/61.wav\r\n",
-      "Data/NCE/2/71.wav\r\n",
-      "Data/NCE/2/81.wav\r\n",
-      "Data/NCE/2/91.wav\r\n",
-      "Data/NCE/2/Lesson 1 A private conversation.wav\r\n",
-      "Data/NCE/2/Lesson 10 Not for jazz.wav\r\n",
-      "Data/NCE/2/Lesson 11 One good turn deserves another.wav\r\n",
-      "Data/NCE/2/Lesson 12 Goodbye and good luck.wav\r\n",
-      "Data/NCE/2/Lesson 13 The Greenwood Boys.wav\r\n",
-      "Data/NCE/2/Lesson 14 Do you speak English.wav\r\n",
-      "Data/NCE/2/Lesson 15 Good news.wav\r\n",
-      "Data/NCE/2/Lesson 16 A polite request.wav\r\n",
-      "Data/NCE/2/Lesson 17 Always young.wav\r\n",
-      "Data/NCE/2/Lesson 18 He often does this!.wav\r\n",
-      "Data/NCE/2/Lesson 19 Sold out.wav\r\n",
-      "Data/NCE/2/Lesson 21 Mad or not.wav\r\n",
-      "Data/NCE/2/Lesson 31 Success story.wav\r\n",
-      "Data/NCE/2/Lesson 41 Do you call that a hat.wav\r\n",
-      "Data/NCE/2/Lesson 51 Reward for virtue.wav\r\n",
-      "Data/NCE/2/Lesson 61 Trouble with the Hubble.wav\r\n",
-      "Data/NCE/2/Lesson 71 A famous clock.wav\r\n",
-      "Data/NCE/2/Lesson 81 Escape.wav\r\n",
-      "Data/NCE/2/Lesson 91 Three men in a basket.wav\r\n"
+      "Data/NCE/2/1.wav    Data/NCE/2/1_0.wav  Data/NCE/2/1_19.wav Data/NCE/2/1_7.wav\r\n",
+      "Data/NCE/2/10.wav   Data/NCE/2/1_1.wav  Data/NCE/2/1_2.wav  Data/NCE/2/1_8.wav\r\n",
+      "Data/NCE/2/11.wav   Data/NCE/2/1_10.wav Data/NCE/2/1_20.wav Data/NCE/2/1_9.wav\r\n",
+      "Data/NCE/2/12.wav   Data/NCE/2/1_11.wav Data/NCE/2/1_21.wav Data/NCE/2/21.wav\r\n",
+      "Data/NCE/2/13.wav   Data/NCE/2/1_12.wav Data/NCE/2/1_22.wav Data/NCE/2/31.wav\r\n",
+      "Data/NCE/2/14.wav   Data/NCE/2/1_13.wav Data/NCE/2/1_23.wav Data/NCE/2/41.wav\r\n",
+      "Data/NCE/2/15.wav   Data/NCE/2/1_14.wav Data/NCE/2/1_24.wav Data/NCE/2/51.wav\r\n",
+      "Data/NCE/2/16.wav   Data/NCE/2/1_15.wav Data/NCE/2/1_3.wav  Data/NCE/2/61.wav\r\n",
+      "Data/NCE/2/17.wav   Data/NCE/2/1_16.wav Data/NCE/2/1_4.wav  Data/NCE/2/71.wav\r\n",
+      "Data/NCE/2/18.wav   Data/NCE/2/1_17.wav Data/NCE/2/1_5.wav  Data/NCE/2/81.wav\r\n",
+      "Data/NCE/2/19.wav   Data/NCE/2/1_18.wav Data/NCE/2/1_6.wav  Data/NCE/2/91.wav\r\n"
      ]
     }
    ],
@@ -237,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +340,7 @@
      "output_type": "stream",
      "text": [
       "1.3065578231292518\n",
-      "--- 0.020643949508666992 seconds ---\n",
+      "--- 0.028814077377319336 seconds ---\n",
       "\u001b[1m\u001b[36mData\u001b[m\u001b[m                     \u001b[1m\u001b[36mPlot\u001b[m\u001b[m                     chunk_s0.wav\r\n",
       "DownloadAudio_NPR.ipynb  Prev_MVP.ipynb           chunk_s1.wav\r\n",
       "Jun15_MVP.ipynb          README.md                chunk_s2.wav\r\n",
