update files for MVP3

--- a/Project/MVP.ipynb
+++ b/Project/MVP.ipynb
@@ -47,7 +47,8 @@
     "- NPR sunday: https://www.npr.org/programs/weekend-edition-sunday/\n",
     "- Ted talk: https://itunes.apple.com/us/podcast/ted-talks-daily/id160904630?mt=2\n",
     "- Public meeting: http://www.sbccd.org/Board_of_Trustees/Agendas_and_Minutes\n",
-    "- NPR upfirst: https://www.npr.org/podcasts/510318/up-first"
+    "- NPR upfirst: https://www.npr.org/podcasts/510318/up-first\n",
+    "- Congress: https://www.loc.gov/item/sn88063877/"
    ]
   },
   {
