check in before week 4

--- a/Project/MVP.ipynb
+++ b/Project/MVP.ipynb
@@ -74,6 +74,7 @@
     "## Natural Language Processing\n",
     "\n",
     "- Insight: https://blog.insightdatascience.com/how-to-solve-90-of-nlp-problems-a-step-by-step-guide-fda605278e4e\n",
+    "- Insight ipynb: https://github.com/hundredblocks/concrete_NLP_tutorial/blob/master/NLP_notebook.ipynb\n",
     "- Intro/resource: https://github.com/icoxfog417/awesome-text-summarization\n",
     "- Summy: https://github.com/miso-belica/sumy\n",
     "- NewsHighlights: https://cs.nyu.edu/~kcho/DMQA/\n",
